fixed m5a1.js to be correct with the instructions

--- a/M5A1/m5a1.htm
+++ b/M5A1/m5a1.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>M5A1 JS Prime</title>
+    <title>COP 1830 JavaScript Branching Project</title>
     <meta charset="UTF-8">
     <!--
         Filename: m5a1.htm
@@ -17,7 +17,7 @@
     <div style="border-style: solid; padding: .5em;">
         <h1>COP 1830 JavaScript Branching Project</h1>
         <p>This webpage runs an external JavaScript that requests a whole number and displays a message indicating if
-            it is a prime number or not</p>
+            it is a prime number or not.</p>
         <p>
             <script type="text/javascript" src="m5a1.js"></script>
         </p>
